--- a/angular/app/components/director-list/director-list.component.html
+++ b/angular/app/components/director-list/director-list.component.html
@@ -21,7 +21,7 @@
                 <div class="box-header with-border">
                     <h3 class="box-title">Stakeholder List</h3>
                     <div class="box-tools pull-right">
-                        <a ui-sref="app.companyadd" class="btn btn-block btn-success btn-xs"><i class="fa fa-plus"></i> Add New</a>
+                        <a ui-sref="app.app.stakeadd({companyId:vm.companyId})" class="btn btn-block btn-success btn-xs"><i class="fa fa-plus"></i> Add New</a>
                     </div>
                 </div>
                 <div class="box-body">
