--- a/angular/app/components/nav-sidebar/nav-sidebar.component.html
+++ b/angular/app/components/nav-sidebar/nav-sidebar.component.html
@@ -39,7 +39,10 @@
           <i class="fa fa-book"></i> <span>Cases</span> <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
-          <li class="active"><a ui-sref='app.companylist'><i class="fa  fa-list"></i> <span>Case List</span></a></li>
+          <li class="active"><a ui-sref='app.companylist'><i class="fa  fa-list"></i> <span>CVL/MVL/CVA/CWU</span></a></li>
+        </ul>
+        <ul class="treeview-menu">
+          <li class="active"><a ui-sref='app.companylist'><i class="fa  fa-list"></i> <span>IVA/BKY</span></a></li>
         </ul>
       </li>
       <li class="treeview">
