--- a/angular/app/components/stake-add/stake-add.component.html
+++ b/angular/app/components/stake-add/stake-add.component.html
@@ -1,8 +1,8 @@
 <section class="content-header">
-    <h1>Add Director<small> Add Director to case</small></h1>
+    <h1>Add Stakeholder<small> Add Stakeholder to case</small></h1>
     <ol class="breadcrumb">
         <li><a ui-sref="app.landing"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="active">Add Director</li>
+        <li class="active">Add Stakeholder</li>
     </ol>
 </section>
 <section class="content">
@@ -18,7 +18,6 @@
         </div>
         <div class="box-footer">
               <a ui-sref="app.companydetails({companyId:vm.companyId})" class="btn btn-default"><i class="fa fa-angle-double-left"></i> Back</a>
-
         </div>
     </div>
 </section>
