--- a/angular/app/components/client-edit/client-edit.component.html
+++ b/angular/app/components/client-edit/client-edit.component.html
@@ -1,5 +1,5 @@
 <section class="content-header">
-    <h1>Client Edit<small>Module description here</small></h1>
+    <h1>Client Edit<small>Edit Client</small></h1>
     <ol class="breadcrumb">
         <li><a ui-sref="app.landing"><i class="fa fa-dashboard"></i> Home</a></li>
         <li><a ui-sref="app.clientlist">Client Lists</a></li>
@@ -69,10 +69,15 @@
                             </div>
                         </div>
                         <div class="form-group" ng-class="{ 'has-error': roleForm.dob.$invalid && ( vm.formSubmitted || roleForm.dob.$touched) }">
-                            <label for="inputEmail3" class="col-sm-2 control-label">Date of birth</label>
+                            <label for="inputEmail3" class="col-sm-2 control-label">Date of Birth</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="vm.client.data.dob" name="dob" placeholder="dob" required>
-                                <p ng-show="roleForm.role.$error.required && ( vm.formSubmitted || roleForm.role.$touched)" class="help-block">Date Of birth is required. </p>
+                            <p class="input-group">
+                            <input type="text" name="dob"  class="form-control"  uib-datepicker-popup="{{format}}" ng-model="vm.client.data.dob" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" required />
+                            <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+                            </span>
+                            </p>
+                            <p ng-show="roleForm.role.$error.required && ( vm.formSubmitted || roleForm.role.$touched)" class="help-block">Date Of Birth is required. </p>
                             </div>
                         </div>
                         <div class="form-group" ng-class="{ 'has-error': roleForm.ninumber.$invalid && ( vm.formSubmitted || roleForm.ninumber.$touched) }">
