--- a/angular/app/components/companie-add/companie-add.component.html
+++ b/angular/app/components/companie-add/companie-add.component.html
@@ -1,9 +1,9 @@
 <section class="content-header">
-    <h1>Add Client<small>Module description here</small></h1>
+    <h1>Add Case<small>Add a new case</small></h1>
     <ol class="breadcrumb">
         <li><a ui-sref="app.landing"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a ui-sref="app.clientlist">Cients List</a></li>
-        <li class="active">Add Cient</li>
+        <li><a ui-sref="app.companylist">Case List</a></li>
+        <li class="active">Add Case</li>
     </ol>
 </section>
 <section class="content">
@@ -11,7 +11,7 @@
         <div class="col-sm-12 col-md-7">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Add Client</h3>
+                    <h3 class="box-title">Add Case</h3>
                 </div>
                 <form class="form-horizontal" name="roleForm" ng-submit="vm.save(roleForm.$valid, roleForm)" novalidate>
                     <div class="box-body">
@@ -22,29 +22,41 @@
                         <div class="form-group" ng-class="{ 'has-error': roleForm.name.$invalid && ( vm.formSubmitted || roleForm.name.$touched) }">
                             <label for="inputEmail3" class="col-sm-2 control-label">Company name</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="vm.name" name="name" placeholder="name" required>
+                                <input type="text" class="form-control" ng-model="vm.name" name="name" placeholder="Company Name" required>
                                 <p ng-show="roleForm.role.$error.required && ( vm.formSubmitted || roleForm.role.$touched)" class="help-block">Company Name is required. </p>
                             </div>
                         </div>
                         <div class="form-group" ng-class="{ 'has-error': roleForm.regno.$invalid && ( vm.formSubmitted || roleForm.regno.$touched) }">
                             <label for="inputEmail3" class="col-sm-2 control-label">Registration-No</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="vm.regno" regno="regno" placeholder="regno" required>
+                                <input type="text" class="form-control" ng-model="vm.regno" name="regno" placeholder="Registration No" required>
                                 <p ng-show="roleForm.role.$error.required && ( vm.formSubmitted || roleForm.role.$touched)" class="help-block">Registration-No is required. </p>
                             </div>
                         </div>
                         <div class="form-group" ng-class="{ 'has-error': roleForm.casetype.$invalid && ( vm.formSubmitted || roleForm.casetype.$touched) }">
                             <label for="inputEmail3" class="col-sm-2 control-label">Case Type</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="vm.casetype" casetype="casetype" placeholder="casetype" required>
+                                           
+        
+              <select class="form-control" ng-model="vm.casetype"  name="casetype" required> 
+                <option>CVL</option>
+                <option>MVL</option>
+                <option>CVA</option>
+                <option>CWU</option>
+              </select>
+
                                 <p ng-show="roleForm.role.$error.required && ( vm.formSubmitted || roleForm.role.$touched)" class="help-block">Case Type is required. </p>
                             </div>
                         </div>
                         <div class="form-group" ng-class="{ 'has-error': roleForm.appdate.$invalid && ( vm.formSubmitted || roleForm.appdate.$touched) }">
                             <label for="inputEmail3" class="col-sm-2 control-label">Appointment Date</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="vm.appdate" appdate="appdate" placeholder="appdate" required>
-                                <p ng-show="roleForm.role.$error.required && ( vm.formSubmitted || roleForm.role.$touched)" class="help-block">Appointment Date is required. </p>
+                               <p class="input-group">
+          <input type="text" name="appdate"  class="form-control" uib-datepicker-popup="{{format}}" ng-model="vm.appdate" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats"  required />
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+        </p>
                             </div>
                         </div>
                         <div class="box-footer">
