--- a/angular/app/components/companie-edit/companie-edit.component.html
+++ b/angular/app/components/companie-edit/companie-edit.component.html
@@ -2,7 +2,7 @@
     <h1>Client Edit<small>Module description here</small></h1>
     <ol class="breadcrumb">
         <li><a ui-sref="app.landing"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a ui-sref="app.clientlist">Client Lists</a></li>
+        <li><a ui-sref="app.companylist">Case Lists</a></li>
         <li class="active">Client Edit</li>
     </ol>
 </section>
@@ -36,20 +36,32 @@
                         <div class="form-group" ng-class="{ 'has-error': roleForm.casetype.$invalid && ( vm.formSubmitted || roleForm.casetype.$touched) }">
                             <label for="inputEmail3" class="col-sm-2 control-label">Case Type</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="vm.company.data.casetype" casetype="casetype" placeholder="casetype" required>
+                                
+              <select class="form-control" ng-model="vm.company.data.casetype"  name="casetype" required> 
+                <option>CVL</option>
+                <option>MVL</option>
+                <option>CVA</option>
+                <option>CWU</option>
+              </select>
+
                                 <p ng-show="roleForm.role.$error.required && ( vm.formSubmitted || roleForm.role.$touched)" class="help-block">Case Type is required. </p>
                             </div>
                         </div>
                         <div class="form-group" ng-class="{ 'has-error': roleForm.appdate.$invalid && ( vm.formSubmitted || roleForm.appdate.$touched) }">
                             <label for="inputEmail3" class="col-sm-2 control-label">Appointment Date</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="vm.company.data.appdate" appdate="appdate" placeholder="appdate" required>
-                                <p ng-show="roleForm.role.$error.required && ( vm.formSubmitted || roleForm.role.$touched)" class="help-block">Appointment Date is required. </p>
+                                                        <div class="col-sm-10">
+                            <p class="input-group">
+                            <input type="text" name="appdate"  class="form-control"  uib-datepicker-popup="{{format}}" ng-model="vm.company.data.appdate" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" required />
+                            <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+                            </span>
+                            </p>
                             </div>
+
                         </div>
                         <div class="box-footer">
                             <a ui-sref="app.companylist" class="btn btn-default"><i class="fa fa-angle-double-left"></i> Back</a>
-                            <button type="submit" class="btn btn-primary pull-right">edit</button>
+                            <button type="submit" class="btn btn-primary pull-right">Update</button>
                         </div>
                 </form>
             </div>
