--- a/angular/app/components/companie-list/companie-list.component.html
+++ b/angular/app/components/companie-list/companie-list.component.html
@@ -1,5 +1,5 @@
 <section class="content-header">
-    <h1>Case List<small>Module description here</small></h1>
+    <h1>Case List<small>Case List</small></h1>
     <ol class="breadcrumb">
         <li><a ui-sref="app.landing"><i class="fa fa-dashboard"></i> Home</a></li>
         <li class="active">Case List</li>
