--- a/angular/app/components/nav-sidebar/nav-sidebar.component.html
+++ b/angular/app/components/nav-sidebar/nav-sidebar.component.html
@@ -30,7 +30,7 @@
           <i class="fa  fa-tasks"></i> <span>Tasks</span> <small class="label pull-right bg-red">3</small>
         </a>
         <ul class="treeview-menu">
-          <li class="active"><a ui-sref='app.pendingcomplete'><i class="fa fa-sticky-note-o"></i> <span>Tasks</span></a></li>
+          <li class="active"><a ui-sref='app.todaylist'><i class="fa fa-sticky-note-o"></i> <span>Tasks</span></a></li>
 
         </ul>
       </li>
@@ -61,6 +61,7 @@
           <li class="active"><a ui-sref='app.costlist'><i class="fa fa-circle-o"></i> <span>Cost List</span></a></li>
         </ul>
       </li>
+      <!---
       <li class="treeview" ng-show="vm.can('manage.users')">
         <a href="javascript:void(0)">
           <i class="fa fa-users"></i> <span>Users</span> <i class="fa fa-angle-left pull-right"></i>
@@ -175,7 +176,7 @@
           <li><a ui-sref="app.comingsoon"><i class="fa fa-circle-o"></i> Blank Page</a></li>
           <li><a ui-sref="app.comingsoon"><i class="fa fa-circle-o"></i> Pace Page</a></li>
         </ul>
-      </li>
+      </li>-->
     </ul>
   </section>
 </aside>
