--- a/angular/app/components/cost-edit/cost-edit.component.html
+++ b/angular/app/components/cost-edit/cost-edit.component.html
@@ -1,9 +1,9 @@
 <section class="content-header">
-    <h1>Case<small>Edit Case</small></h1>
+    <h1>Case<small>Edit Cost</small></h1>
     <ol class="breadcrumb">
         <li><a ui-sref="app.landing"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a ui-sref="app.caselist">Case Lists</a></li>
-        <li class="active">Edit Case</li>
+        <li><a ui-sref="app.caselist">Cost Lists</a></li>
+        <li class="active">Cost Case</li>
     </ol>
 </section>
 <section class="content">
@@ -11,7 +11,7 @@
         <div class="col-sm-12 col-md-7">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Edit Case</h3>
+                    <h3 class="box-title">Edit Cost</h3>
                 </div>
                 <form class="form-horizontal" name="caseForm" ng-submit="vm.save(caseForm.$valid)" novalidate>
                     <div class="box-body">
@@ -33,12 +33,7 @@
                                 <p ng-show="caseForm.no.$error.required && ( vm.formSubmitted || caseForm.slug.$touched)" class="help-block">Number is required.</p>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="inputPassword3" class="col-sm-2 control-label">Contact</label>
-                            <div class="col-sm-10">
-                                <textarea class="form-control" rows="3" ng-model="vm.cases.data.contact_id" name="contact_id" placeholder="Contact"></textarea>
-                            </div>
-                        </div>
+                
                     </div>
                     <div class="box-footer">
                         <a ui-sref="app.caselist" class="btn btn-default"><i class="fa fa-angle-double-left"></i> Back</a>
