--- a/angular/app/components/task-add/task-add.component.html
+++ b/angular/app/components/task-add/task-add.component.html
@@ -1,9 +1,9 @@
 <section class="content-header">
-    <h1>Add Client<small>Module description here</small></h1>
+    <h1>Add Task<small>Enter Tasks here</small></h1>
     <ol class="breadcrumb">
         <li><a ui-sref="app.landing"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a ui-sref="app.clientlist">Cients List</a></li>
-        <li class="active">Add Cient</li>
+        <li><a ui-sref="app.companylist">Case List</a></li>
+        <li class="active">Add Task</li>
     </ol>
 </section>
 <section class="content">
@@ -11,7 +11,7 @@
         <div class="col-sm-12 col-md-7">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Add Client</h3>
+                    <h3 class="box-title">Add Task</h3>
                 </div>
                 <form class="form-horizontal" name="roleForm" ng-submit="vm.save(roleForm.$valid, roleForm)" novalidate>
                     <div class="box-body">
@@ -22,14 +22,20 @@
                         <div class="form-group" ng-class="{ 'has-error': roleForm.narration.$invalid && ( vm.formSubmitted || roleForm.narration.$touched) }">
                             <label for="inputEmail3" class="col-sm-2 control-label">Narration</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="vm.narration" name="narration" placeholder="narration" required>
+                                <input type="text" class="form-control" ng-model="vm.narration" name="narration" placeholder="Narration" required>
                                 <p ng-show="roleForm.role.$error.required && ( vm.formSubmitted || roleForm.role.$touched)" class="help-block">Narration is required. </p>
                             </div>
                         </div>
                         <div class="form-group" ng-class="{ 'has-error': roleForm.reminder_date.$invalid && ( vm.formSubmitted || roleForm.reminder_date.$touched) }">
                             <label for="inputEmail3" class="col-sm-2 control-label">Date Of Reminder</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" ng-model="vm.reminder_date" name="reminder_date" placeholder="reminder_date" required>
+                                          <p class="input-group">
+          <input type="text" name="reminder_date"  class="form-control" uib-datepicker-popup="{{format}}" ng-model="vm.reminder_date" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats"  required />
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+        </p>
+                                
                                 <p ng-show="roleForm.role.$error.required && ( vm.formSubmitted || roleForm.role.$touched)" class="help-block">Date Of Reminder is required. </p>
                             </div>
                         </div>
