--- a/angular/app/components/nav-sidebar/nav-sidebar.component.html
+++ b/angular/app/components/nav-sidebar/nav-sidebar.component.html
@@ -27,7 +27,7 @@
       </li>
       <li class="treeview">
         <a href="javascript:void(0)">
-          <i class="fa  fa-tasks"></i> <span>Tasks</span> <small class="label pull-right bg-red">3</small>
+          <i class="fa  fa-tasks"></i> <span>Tasks</span> 
         </a>
         <ul class="treeview-menu">
           <li class="active"><a ui-sref='app.todaylist'><i class="fa fa-sticky-note-o"></i> <span>Tasks</span></a></li>
@@ -40,7 +40,7 @@
         </a>
         <ul class="treeview-menu">
           <li class="active"><a ui-sref='app.companylist'><i class="fa  fa-list"></i> <span>CVL/MVL/CVA/CWU</span></a></li>
-          <li class="active"><a ui-sref='#'><i class="fa  fa-list"></i> <span>IVA/BKY</span></a></li>
+          <li class="active"><a ui-sref='app.caselist'><i class="fa  fa-list"></i> <span>IVA/BKY</span></a></li>
         </ul>
       </li>
       <li class="treeview">
