--- a/angular/app/components/task-edit/task-edit.component.html
+++ b/angular/app/components/task-edit/task-edit.component.html
@@ -101,7 +101,8 @@
 
                     </div>
                     <div class="box-footer">
-                           <a ui-sref="app.companydetails({companyId:vm.clientId})" class="btn btn-default"><i class="fa fa-angle-double-left"></i> Back</a>
+                     <!---      <a ui-sref="app.companydetails({companyId:vm.clientId})" class="btn btn-default"><i class="fa fa-angle-double-left"></i> Back</a> -->
+                     <a ui-sref="app.todaylist" class="btn btn-default"><i class="fa fa-angle-double-left"></i> Todays Tasks</a>
                         <button type="submit" class="btn btn-primary pull-right">Update</button>
                     </div>
                 </form>
