--- a/angular/app/components/dashboard/dashboard.component.html
+++ b/angular/app/components/dashboard/dashboard.component.html
@@ -42,62 +42,71 @@
     <div class="col-md-12">
       <div class="box box-info">
         <div class="box-header with-border">
-          <h3 class="box-title">Today's Tasks </h3>
+          <h3 class="box-title">Todays Tasks</h3>
           <div class="box-tools pull-right">
             <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
             </button>
-            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
           </div>
         </div>
 
   <div class="box-body">
     <div class="table-responsive">
-      <table class="table no-margin">
-        <thead>
-        <tr>
-          <th>Tasks</th>
-          <th>Status</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-          <td>Task 1</td>
-          <td><span class="label label-success">Completed</span></td>
-        </tr>
-        <tr>
-          <td>Task 2</td>
-          <td><span class="label label-success">Completed</span></td>
-        </tr>
-        <tr>
-          <td>Task 3</td>
-          <td><span class="label label-success">Completed</span></td>
-        </tr>
-        <tr>
-          <td>Task 4</td>
-          <td><span class="label label-danger">Pending</span></td>
-        </tr>
-        <tr>
-          <td>Task 5</td>
-          <td><span class="label label-danger">Pending</span></td>
-        </tr>
-        <tr>
-          <td>Task 6</td>
-          <td><span class="label label-danger">Pending</span></td>
-        </tr>
-        <tr>
-          <td>Task 7</td>
-          <td><span class="label label-success">Completed</span></td>
-        </tr>
-        </tbody>
-      </table>
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<today-list></today-list>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
   </div></div>
-      <div class="box-footer clearfix">
+   <!---   <div class="box-footer clearfix">
         <a href="javascript:void(0)" class="btn btn-sm btn-info btn-flat pull-left">New Task</a>
-        <a href="javascript:void(0)" class="btn btn-sm btn-default btn-flat pull-right">View All Tasks</a>
+        <a href="javascript:void(0)" class="btn btn-sm btn-default btn-flat pull-right">View All Tasks</a>-->
       </div>
     </div>
   </div>
+
+  <!---
   <div class="row">
     <div class="col-md-12">
       <div class="box">
@@ -571,5 +580,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 </section>
