Generate Estimated Time Cos

--- a/angular/app/components/companie-add/companie-add.component.html
+++ b/angular/app/components/companie-add/companie-add.component.html
@@ -61,6 +61,7 @@
                         </div>
                         <div class="box-footer">
                             <a ui-sref="app.companylist" class="btn btn-default"><i class="fa fa-angle-double-left"></i> Back</a>
+                            <a ui-sref="#" class="btn btn-warning"><i class="fa fa-angle-double-right"></i> Generate Estimated Time Cost</a>
                             <button type="submit" class="btn btn-primary pull-right">Add New</button>
                         </div>
                     </div>
